Mi segundo commit

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Hello Wordl</title>
 </head>
 <body>
-    <h1>Hola Estudiates</h1>
+    <h1>Hola Amigos y Amigas</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias eius commodi veritatis ipsam aliquam animi perferendis omnis sapiente et, odit repellendus fuga at quisquam tenetur ducimus dolores mollitia. Expedita, dignissimos.</p>
 </body>
 </html>
